[[bin]]
name = "PRun"
path = "Source/Library.rs"

[[bin]]
name = "Run"
path = "Source/Library.rs"

[[bin]]
name = "Inn"
path = "Source/Library.rs"

[[bin]]
name = "Innkeeper"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.4" }
tokio = { features = ["full"], version = "1.36.0" }
walkdir = "2.5.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Run"
description = "🍺 Run"
license = "MIT"
name = "prun"
repository = "https://github.com/Playform/Run.git"
version = "0.0.4"
edition = "2021"
