[[bin]]
name = "PRun"
path = "Source/Library.rs"

[[bin]]
name = "Run"
path = "Source/Library.rs"

[[bin]]
name = "Inn"
path = "Source/Library.rs"

[[bin]]
name = "Innkeeper"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.11" }
walkdir = "2.5.0"
futures = "0.3.30"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
num_cpus = "1.16.0"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.17"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Run"
description = "🍺 Run —"
license = "MIT"
name = "prun"
repository = "https://github.com/PlayForm/Run.git"
version = "0.1.0"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
