[[bin]]
name = "PRun"
path = "Source/Library.rs"

[[bin]]
name = "Run"
path = "Source/Library.rs"

[[bin]]
name = "Inn"
path = "Source/Library.rs"

[[bin]]
name = "InnKeeper"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.17" }
walkdir = "2.5.0"
futures = "0.3.30"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }
num_cpus = "1.16.0"
once_cell = "1.20.0"

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Run"
description = "🍺 Run —"
license = "MIT"
name = "prun"
repository = "https://github.com/PlayForm/Run.git"
version = "0.1.1"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
